<resources>
    <!-- APP -->
    <string name="app_name">Tabla Periódica</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Configuración</string>

    <!-- Titulos páginas -->
    <string name="title_activity_settings">Configuración</string>
    <string name="title_activity_ayuda">Ayuda</string>
    <string name="title_activity_contacto">Contacto</string>

    <!-- Menu lateral -->
    <string name="menu_lateral_titulo_inicio">Inicio</string>
    <string name="menu_lateral_titulo_tabla_periodica">Tabla periódica</string>
    <string name="menu_lateral_titulo_tabla_jugar">Jugar</string>
    <string name="menu_lateral_titulo_puntuaciones">Puntuaciones</string>
    <string name="menu_lateral_titulo_submenu">App</string>
    <string name="menu_lateral_configuracion">Configuración</string>
    <string name="menu_lateral_ayuda_y_contacto">Ayuda y Contacto</string>
</resources>
