<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/item_navigation_drawer_inbox"
            android:icon="@mipmap/ic_home_black_48dp"
            android:title="@string/menu_lateral_titulo_inicio" />
        <item
            android:id="@+id/item_navigation_drawer_starred"
            android:icon="@mipmap/ic_book_open_page_variant_black_48dp"
            android:title="@string/menu_lateral_titulo_tabla_periodica" />
        <item
            android:id="@+id/item_navigation_drawer_sent_mail"
            android:icon="@mipmap/ic_gamepad_variant_black_48dp"
            android:title="@string/menu_lateral_titulo_tabla_jugar" />
        <item
            android:id="@+id/item_navigation_drawer_drafts"
            android:icon="@mipmap/ic_format_list_numbers_black_48dp"
            android:title="@string/menu_lateral_titulo_puntuaciones" />
    </group>

    <item android:title="@string/menu_lateral_titulo_submenu">
        <menu>
            <item
                android:id="@+id/item_navigation_drawer_settings"
                android:icon="@mipmap/ic_action_action_settings"
                android:title="@string/menu_lateral_configuracion" />
            <item
                android:id="@+id/item_navigation_drawer_help_and_feedback"
                android:icon="@mipmap/ic_action_action_help"
                android:title="@string/menu_lateral_ayuda_y_contacto" />
        </menu>
    </item>

</menu>